# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1036 2011/01/18 00:12:45 mpagano Exp $

*git-sources-2.6.37-r17 (18 Jan 2011)

  18 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r17.ebuild:
  Version bump

*git-sources-2.6.37-r16 (17 Jan 2011)

  17 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r16.ebuild:
  Version bump

*git-sources-2.6.37-r15 (17 Jan 2011)

  17 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r15.ebuild:
  Version bump

*git-sources-2.6.37-r14 (16 Jan 2011)

  16 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r14.ebuild:
  Version bump

*git-sources-2.6.37-r13 (16 Jan 2011)

  16 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r13.ebuild:
  Version bump

*git-sources-2.6.37-r12 (15 Jan 2011)

  15 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r12.ebuild:
  Version bump

*git-sources-2.6.37-r11 (14 Jan 2011)

  14 Jan 2011; Mike Pagano <mpagano@gentoo.org> +git-sources-2.6.37-r11.ebuild:
  Version bump

*git-sources-2.6.37-r10 (14 Jan 2011)

  14 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r10.ebuild:
  Version bump

*git-sources-2.6.37-r9 (13 Jan 2011)

  13 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r9.ebuild:
  Version bump

*git-sources-2.6.37-r8 (12 Jan 2011)

  12 Jan 2011; Mike Pagano <mpagano@gentoo.org> +git-sources-2.6.37-r8.ebuild:
  Version bump

*git-sources-2.6.37-r7 (12 Jan 2011)

  12 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r7.ebuild:
  Version bump

*git-sources-2.6.37-r6 (12 Jan 2011)

  12 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37-r6.ebuild:
  Version bump

*git-sources-2.6.37-r5 (11 Jan 2011)
