@@ -11,6 +11,7 @@ DIST patch-2.6.37-git14.bz2 8123222 RMD160 8a56aee0e6cf05d20c2c5ae734022bdb88baf
 DIST patch-2.6.37-git15.bz2 8146378 RMD160 d07e4972f93c7f01657c8095a1467765614071bf SHA1 a9867302036e61b1ca38188cff988b5702f764c1 SHA256 3ed21a106b8423c934f4f2ab7f806916c6324bcd6f6eb68a159a08c29b5fd173
 DIST patch-2.6.37-git16.bz2 8146090 RMD160 3340476b4527dca907b5b1e56504f5bd934b6d6a SHA1 20ccba305e1031cc9f245a132bba42b939ad2f81 SHA256 a30b0c614790b9a063f84f8f688d53730091d1e68e0c51aba24bdedf40344cde
 DIST patch-2.6.37-git17.bz2 8206891 RMD160 0420f4d8c5743a8a9e319b016a9b92ac6d95ae62 SHA1 f1199e2c33864b7a58cda72806ace62e8a17d13f SHA256 a5404798f47eb48a085c4202392cba00ad52fcec82aadd71ce435352563ec88e
+DIST patch-2.6.37-git18.bz2 8207848 RMD160 f44427c84b7fbb4cbdcc27a3273de1cd194eccbc SHA1 ebed4c0c37f9eea0ee5ebb8028a8e1742053e521 SHA256 99813c3ab749577f520982d4ecf5a8196d389c564490336b5e889a8f951ab1e7
 DIST patch-2.6.37-git2.bz2 4533378 RMD160 f1a2c58864c8a21f688b76f36976bf3a2fbf8a27 SHA1 28bb9ba800df722be67dea93bb5c00b67edafd70 SHA256 0e4c4a64dca1451f1ce62e7a2a4bfade361dfe3d90eaef53f4d9b9c5079a4535
 DIST patch-2.6.37-git3.bz2 5154670 RMD160 1c7e28b9fc9264f25cf3ddb82ee2112c7ec3ad47 SHA1 04be92b3351118d17d8c86ad4de14b10cfb83931 SHA256 92b779c9a163b6956c4ea0e449c08416d6bc7c6a714b6da0ff70fd5a7afd3286
 DIST patch-2.6.37-git4.bz2 5211682 RMD160 fea4a5a3a605d7dcec3bde38f79a6c36fb74b38a SHA1 c71aef8a02fcddca690b227b4ea5ff76e4dcfeef SHA256 d732f592d2820e14bebf99352c5c48224b98443cf36b110a5c02115035402cbc
@@ -28,6 +29,7 @@ EBUILD git-sources-2.6.37-r14.ebuild 1264 RMD160 f80c49386ef1411efe5bbb44c2ce437
 EBUILD git-sources-2.6.37-r15.ebuild 1264 RMD160 3709c4c8d67fe5747d5d27ba91ccb51bff77c3b9 SHA1 5af745c541189beef14679d8dbe926eb85c1e31a SHA256 ddee5e9118943f8f6401a3cda53607ba2eec3f36daec691957a98723c1a7fd58
 EBUILD git-sources-2.6.37-r16.ebuild 1264 RMD160 6422f7131233199d8aa58f3edf63a13a8bfb9adf SHA1 376b801937a2634279294a2f83de8392735d2bec SHA256 317a93d7153ddd0b3e1e599281a22095022166b600211081f8a4de9bbeb46650
 EBUILD git-sources-2.6.37-r17.ebuild 1264 RMD160 53c1ac9f09e4ea9db5d46d989b624d28649d4284 SHA1 a8fdd0c22aa4b5dae881394fb50be6f09c1dc379 SHA256 d0489bbe687f6ecc519d1a2912d77d9c8e876fb8c1d86b8809620a1157e8d30e
+EBUILD git-sources-2.6.37-r18.ebuild 1264 RMD160 b0ccd164fff523ec01d828bf26bf09cffd10861a SHA1 7bf9903387bb59946eaa4eab8e5505d8820136cc SHA256 3f4bde528e32b905084428afaa888e28bfd796c81105d317212a6a437d24355e
 EBUILD git-sources-2.6.37-r2.ebuild 1263 RMD160 68087d7ab5a3d9e723bc2082898eb301e32f0e25 SHA1 c368ccea1f07fad4ebe8046f472de8a7d45c17e7 SHA256 7fa5b83ea3557509275d5a47b6cadd62059ebf710d1db881e76c5005a5a52a6d
 EBUILD git-sources-2.6.37-r3.ebuild 1263 RMD160 37b615b7eaf9386b3205e44ab21014bfa36cedbb SHA1 7073ec05b9e83c52ed5f6213205f11a990835362 SHA256 08ea76e1273b77470cb68a301f87aa2bf3b36c7c455231cf10d16f3aa42a087f
 EBUILD git-sources-2.6.37-r4.ebuild 1263 RMD160 12cdc5d09c58becf25b460fe1224f73181e3d727 SHA1 6183320531a076e524663746eb8131421a59d10e SHA256 917fb7127d3319c9faabb2ad79eca0d5b70b6f85ae13b1e668cc817aeadfa7c5
@@ -36,12 +38,12 @@ EBUILD git-sources-2.6.37-r6.ebuild 1263 RMD160 6922e946f591caa1cff01867d9037619
 EBUILD git-sources-2.6.37-r7.ebuild 1263 RMD160 47c9d773530e2b3e0a6dbf1afd70be9d5136704e SHA1 474b76bbdd34f4f3c38c8517d981216c7fbb2e82 SHA256 5f062757d4562bb99b286458425d8184b8d81ca612cbd64a2bf1d0721a6bbace
 EBUILD git-sources-2.6.37-r8.ebuild 1263 RMD160 113cda8fb9268ab26a7004fa14d4aed4174c04c2 SHA1 5566039e729df18215ae7bc2787557eb39fb6084 SHA256 b9a573b99b856c8e0b609b3f28a76248932887518398d5b4ecc7f8180276b593
 EBUILD git-sources-2.6.37-r9.ebuild 1263 RMD160 1305764990a6023672811be33d3cdc6d7a0606ea SHA1 2527a97e9b9ac390101fc0254fbc6156854bb4b4 SHA256 e49deb07b51ea3c3555a4e3a94069fee88242f09a61646e4c97a8e0ce3b658d6
-MISC ChangeLog 199090 RMD160 0c0138a3a9ed891d7bc708e14f6794f4294e5727 SHA1 489aba560d1fca6b4f73a837131247ba5cf497b9 SHA256 5b40652e19fff8958efc3ed12a40b86d15a7e758d8f55cfa50c0a69781d2e0b3
+MISC ChangeLog 199225 RMD160 1ce4fca10d4ed7e7583ad9361bee15a2d503e027 SHA1 b4b8d2ca21b0dc17bb8c5c2d33c05d52aed37e7e SHA256 e060a040a07e30caff60b0c35e7e7a22c696aec61fa33170cfd300b2d5883823
 MISC metadata.xml 460 RMD160 a96aabd76f2d713116e9c2b131da3a5a2b09065f SHA1 c050d9450624357dfd0db2b82e16717da7cbca29 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk002wYACgkQPDPGULV25OPLyQCgxXa0bOyPDHPhXLTU7r+x/xxx
-LbEAn3qX7w2mfFQOi9YWDOfnB9XdgtT4
-=y1ZQ
+iEYEARECAAYFAk01rUQACgkQPDPGULV25ONJbgCfTo75uZJ+kvE1/wUiNiHv6aQ3
+SwEAn3/1PJt5Jy+ibXcukO4+oqgR9Du6
+=gj2s
 -----END PGP SIGNATURE-----
